# apipkg

./: .gitignore  .hgignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG  MANIFEST.in  README.rst  README.txt  apipkg.py  conftest.py  initpkg.py  pyproject.toml  readme.txt  setup.cfg  setup.py  test_apipkg.py  test_initpkg.py  tox.ini
.github/workflows/: deploy.yaml  pre-commit.yml  pythonapp.yml
example/_mypkg/: somemodule.py
example/mypkg/: __init__.py  othermodule.py  somemodule.py
example/pkg/: __init__.py  x.py
src/apipkg/: __init__.py  _importing.py  _module.py
