[wheel]
universal = true

[metadata]
name = apipkg
description = apipkg: namespace control and lazy-import mechanism
long_description = file: README.txt
url = http://github.com/pytest-dev/apipkg
license = MIT License
platform = unix, linux, osx, cygwin, win32
author = holger krekel
author_email = holger at merlinux.eu
maintainer = Ronny Pfannschmidt
maintainer_email = opensource@ronnypfannschmidt.de
keywords = api, exposure, lazyloading
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development :: Libraries
    Programming Language :: Python

[options]
package_dir =
	 = src

[options.packages.find]
where = src

