[metadata]
name = apipkg
description = apipkg: namespace control and lazy-import mechanism
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pytest-dev/apipkg
author = holger krekel
maintainer = Ronny Pfannschmidt
maintainer_email = opensource@ronnypfannschmidt.de
license = MIT
license_file = LICENSE
platforms =
    unix
    linux
    osx
    cygwin
    win32
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries

[options]
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
package_dir = =src
setup_requires =
    setuptools>=30.3.0
    setuptools_scm

[options.packages.find]
where = src

[wheel]
universal = true
